--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </p>
   </header>
 
+
   <main class="flex-row justify-space-between">
     <div class="col-12 col-md-4">
+
       <div class="card">
         <h3 class="card-header text-uppercase">Search By User</h3>
         <form id="user-form" class="card-body">
@@ -32,11 +34,13 @@
 
     <div class="col-12 col-md-8">
       <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
-      <div id="repos-container" class="list-group"></div>
+      <div id="repos-container" class="list-group">
+
+      </div>
     </div>
   </main>
-<!-- add script at the bottom of the body -->
-<script src="./assets/js/homepage.js"></script>
+
+  <script src="./assets/js/homepage.js"></script>
 </body>
 
 </html>
